kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-platform-service
  namespace: production
spec:
  selector:
    app: devops-platform-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
